K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jollfi-gaming-api-service
spec:
  selector:
    app: jollfi-gaming-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
