K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jollfi-gaming-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - jollfi-gaming-api.example.com
      secretName: jollfi-tls
  rules:
    - host: jollfi-gaming-api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jollfi-gaming-api-service
                port:
                  number: 80
